# specs/openapi.yml
@@ -55,6 +55,8 @@ paths:
               $ref: '#/components/headers/Location'
         400:
           description: The request you made could not be fulfilled right now.
+        404:
+          description: Resource could not be found
   /resorts/{id}:
     get:
       summary: List a specific resort resource by ID
@@ -62,9 +64,35 @@ paths:
       operationId: getResort
       tags:
         - resorts
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/ResortForm'
       responses:
         200:
           $ref: '#/components/responses/ResortResponse'
+        400:
+          description: The request you made could not be fulfilled right now.
+        404:
+          description: Resource could not be found
+    put:
+      summary: Edit a specific resort resource by ID
+      description: Find and edit a specific resort resource by its ID
+      operationId: editResort
+      tags:
+        - resorts
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/ResortForm'
+      responses:
+        200:
+          description: Created
+          headers:
+            location:
+              $ref: '#/components/headers/Location'
         400:
           description: The request you made could not be fulfilled right now.
         404:
@@ -94,6 +122,8 @@ paths:
           $ref: '#/components/responses/RidesResponse'
         400:
           description: The request you made could not be fulfilled right now.
+        404:
+          description: The requested resources could not be found
     post:
       summary: Create a new ride resource
       description: Create a new ride resource for the Walt Disney World Resort
@@ -107,7 +137,7 @@ paths:
               $ref: '#/components/schemas/RideForm'
       responses:
         201:
-          description: Created
+          description: OK
           headers:
             location:
               $ref: '#/components/headers/Location'
@@ -127,6 +157,25 @@ paths:
            description: The request you made could not be fulfilled right now.
          404:
            description: Resource Not Found
+     put:
+       summary: Edit a ride by ID
+       description: Edit a ride in the resource collection by ID
+       operationId: editRide
+       tags:
+         - rides
+       requestBody:
+         content:
+           application/x-www-form-urlencoded:
+             schema:
+               $ref: '#/components/schemas/RideForm'
+       responses:
+         201:
+           description: OK
+           headers:
+             location:
+               $ref: '#/components/headers/Location'
+         400:
+           description: The request you made could not be fulfilled right now.
      delete:
        summary: Delete ride resource by ID
        operationId: deleteRide
@@ -170,6 +219,52 @@ paths:
               $ref: '#/components/headers/Location'
         400:
           description: The request you made could not be fulfilled right now.
+  /restaurants/{id}:
+    get:
+      summary:  List a single restaurant resource from the collection by ID
+      description: Get a single restaurant resource by ID
+      operationId: getRestaurant
+      tags:
+        - restaurants
+      responses:
+        200:
+          $ref: '#/components/responses/RestaurantResponse'
+        400:
+          description: The request you made could not be fulfilled right now
+        404:
+          description: Resource Not Found
+    put:
+      summary: Edit a single restaurant resource in the collection by ID
+      description: Edit a restaurant by ID
+      operationId: editRestaurant
+      tags:
+        - restaurants
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/RestaurantForm'
+      responses:
+        201:
+          description: Created
+          headers:
+            location:
+              $ref: '#/components/headers/Location'
+        400:
+          description: The request you made could not be fulfilled right now.
+    delete:
+      summary: Remove a resource from the restaurants collection
+      description: Remove a resource from the restaurants collection by ID
+      operationId: deleteRestaurant
+      tags:
+        - restaurants
+      responses:
+        204:
+          description: No Content
+        400:
+          description: The request you made could not be fulfilled right now.
+        404:
+          description: The resource could not be found.
   /parks:
     get:
       summary: List all parks at Walt Disney World
@@ -223,7 +318,7 @@ paths:
         - parks
       responses:
         200:
-          description: Created
+          description: OK
           headers:
             location:
               $ref: '#/components/headers/Location'
@@ -593,7 +688,7 @@ components:
             resortArray:
               $ref: '#/components/examples/ResortResponse'
     RestaurantsResponse:
-      description: A list a rides
+      description: A list a restaurant resources
       content:
         application/json:
           schema:
@@ -605,8 +700,23 @@ components:
                   $ref: '#/components/schemas/Restaurants'
                 minLength: 1
           examples:
-            categoriesArray:
+            restaurantsArray:
               $ref: '#/components/examples/RestaurantsResponse'
+    RestaurantResponse:
+      description: A singular restaurant resource
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Restaurant'
+                minLength: 1
+          examples:
+            restaurantArray:
+              $ref: '#/components/examples/RestaurantResponse'
     ParksResponse:
       description: A list a parks at Walt Disney World
       content:
